# test_pyproject

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: publish_testpypi.yml
.github/workflows/: cd.yml  ci.yml  publish_testpypi.yml
src/example_package_mahawo/: __init__.py
tests/: math_test.py
