[project]
name = "example_package_mahawo"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]
dependencies = [
    "numpy", 
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "example_package_mahawo.__version__" }

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pre-commit"]

# Tools 
[tool.pytest.ini_options]
minversion = "6.0"
addopts="-v -x"
testpaths = ["tests"] 

[tool.coverage.run]
branch = true
source = ["./src/iSparrow"]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if non-runnable code isn't run:
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    ]
fail_under = 80

[tool.coverage.html]
directory = "coverage_html_report"
